--- a/safecopy-bson.cabal
+++ b/safecopy-bson.cabal
@@ -18,10 +18,8 @@ library
   -- other-extensions:    
   build-depends:       base >=4.6 && <4.7,
                        bson,
-                       safecopy,
-                       scientific,
+                       safedata,
                        text,
-                       unordered-containers,
                        vector
   hs-source-dirs:      src
   default-language:    Haskell2010
